--- a/index.html
+++ b/index.html
@@ -1,105 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Caring Hands of Tennessee</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #0a1a3f; /* dark blue */
-      color: white;
-      line-height: 1.6;
-    }
-    header {
-      background: #08122d; /* slightly darker blue */
-      padding: 20px;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2em;
-    }
-    nav {
-      margin-top: 10px;
-    }
-    nav a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    section {
-      padding: 40px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-    h2 {
-      color: #ffffff;
-      border-bottom: 2px solid #ffffff;
-      padding-bottom: 10px;
-    }
-    footer {
-      background: #08122d;
-      text-align: center;
-      padding: 15px;
-      font-size: 0.9em;
-    }
-    .btn {
-      display: inline-block;
-      background: white;
-      color: #0a1a3f;
-      padding: 10px 20px;
-      margin-top: 15px;
-      text-decoration: none;
-      border-radius: 5px;
-      font-weight: bold;
-    }
-    .btn:hover {
-      background: #ddd;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Caring Hands of Tennessee</h1>
-    <nav>
-      <a href="#mission">Mission</a>
-      <a href="#programs">Programs</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
-
-  <section id="mission">
-    <h2>Our Mission</h2>
-    <p>
-      At Caring Hands of Tennessee, our mission is to increase access to education and healthcare opportunities for underserved communities. 
-      We are dedicated to creating lasting change through compassion, innovation, and advocacy.
-    </p>
-  </section>
-
-  <section id="programs">
-    <h2>Our Programs</h2>
-    <p>
-      We provide a range of programs focused on education and healthcare, including:
-    </p>
-    <ul>
-      <li>Scholarship and tutoring support for students</li>
-      <li>Community health outreach and resources</li>
-      <li>Workshops promoting wellness and learning</li>
-    </ul>
-    <a href="#contact" class="btn">Get Involved</a>
-  </section>
-
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:info@caringhandstn.org" style="color:white;">info@caringhandstn.org</a></p>
-    <p>Address: Memphis, Tennessee</p>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Caring Hands of Tennessee
+<html>
+  <head>
+    <title>Caring Hands of Tennessee</title>
+  </head>
+  <body style="background: darkblue; color: white; text-align: center; font-family: Arial;">
+    <h1>Hello from Caring Hands of Tennessee!</h1>
+    <p>If you can read this, GitHub Pages is working ✅</p>
+  </body>
+</html>
