--- a/index.html
+++ b/index.html
@@ -1,10 +1,183 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Caring Hands of Tennessee</title>
-  </head>
-  <body style="background: darkblue; color: white; text-align: center; font-family: Arial;">
-    <h1>Hello from Caring Hands of Tennessee!</h1>
-    <p>If you can read this, GitHub Pages is working ✅</p>
-  </body>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Caring Hands of Tennessee</title>
+  <meta name="description" content="Expanding access to healthcare, education, and financial literacy in underserved communities." />
+
+  <style>
+    :root {
+      --primary: #0b2c5d; /* dark blue */
+      --light: #ffffff;
+      --muted: #e5e7eb;
+      --accent: #1e3a8a; /* a richer blue for accents */
+      --maxw: 1000px;
+      --radius: 12px;
+      font-family: "Segoe UI", Roboto, Arial, sans-serif;
+    }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body { background: var(--light); color: var(--primary); line-height: 1.6; }
+    a { color: var(--accent); text-decoration: none; }
+    a:hover { text-decoration: underline; }
+
+    .wrap { max-width: var(--maxw); margin: auto; padding: 24px; }
+    header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 32px; }
+    .logo { font-weight: bold; font-size: 24px; color: var(--primary); }
+
+    nav a { margin-left: 20px; font-weight: 600; color: var(--primary); }
+    nav a:hover { color: var(--accent); }
+
+    .hero {
+      text-align: center;
+      padding: 60px 20px;
+      background: var(--primary);
+      color: var(--light);
+      border-radius: var(--radius);
+      margin-bottom: 40px;
+    }
+    .hero h1 { font-size: 36px; margin-bottom: 16px; }
+    .hero p { font-size: 20px; margin-bottom: 20px; }
+
+    section { margin-bottom: 40px; }
+    h2 { margin-bottom: 16px; font-size: 28px; border-bottom: 3px solid var(--primary); display: inline-block; padding-bottom: 4px; }
+
+    .card-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 20px;
+      margin-top: 16px;
+    }
+    .card {
+      background: var(--primary);
+      color: var(--light);
+      padding: 20px;
+      border-radius: var(--radius);
+    }
+    .card h3 { margin-bottom: 8px; font-size: 20px; }
+
+    .values-list { list-style: none; margin-top: 12px; }
+    .values-list li { margin-bottom: 8px; font-weight: 500; }
+
+    .testimonial {
+      font-style: italic;
+      padding: 20px;
+      background: var(--muted);
+      color: var(--primary);
+      border-radius: var(--radius);
+      margin: 20px 0;
+    }
+
+    footer {
+      text-align: center;
+      font-size: 14px;
+      padding: 20px;
+      border-top: 1px solid var(--muted);
+      color: var(--muted);
+    }
+  </style>
+</head>
+
+<body>
+  <div class="wrap">
+    <header>
+      <div class="logo">Caring Hands of Tennessee</div>
+      <nav>
+        <a href="#mission">Mission</a>
+        <a href="#vision">Vision</a>
+        <a href="#values">Values</a>
+        <a href="#programs">Programs</a>
+        <a href="#impact">Impact</a>
+        <a href="#involved">Get Involved</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </header>
+
+    <div class="hero">
+      <h1>Empowering Our Community Through Education & Health</h1>
+      <p>Providing access, support, and opportunity to every underserved youth.</p>
+    </div>
+
+    <section id="mission">
+      <h2>Mission</h2>
+      <p>To expand access to healthcare, financial literacy, and education, empowering underserved communities to thrive.</p>
+    </section>
+
+    <section id="vision">
+      <h2>Vision</h2>
+      <p>To create a future where underserved youth thrive with health, knowledge, and opportunity.</p>
+    </section>
+
+    <section id="values">
+      <h2>Our Values</h2>
+      <ul class="values-list">
+        <li>Compassion</li>
+        <li>Equity</li>
+        <li>Empowerment</li>
+        <li>Integrity</li>
+        <li>Inclusion</li>
+      </ul>
+    </section>
+
+    <section id="story">
+      <h2>Our Story</h2>
+      <p>In our community, many youth lack access to basic resources, tutoring, and support. Inspired to uplift them, we launched programs in education, health, and financial literacy to ensure that no one is left behind.</p>
+      <p>Caring Hands of Tennessee was created with a simple belief: everyone deserves unlimited access to education and healthcare. What began as a vision to serve local youth has grown into a mission to empower families, strengthen communities, and provide resources that create lasting change.</p>
+    </section>
+
+    <section id="programs">
+      <h2>Programs</h2>
+      <div class="card-grid">
+        <div class="card">
+          <h3>Education</h3>
+          <p>Tutoring, mentoring, & resources that help students succeed in school and beyond.</p>
+        </div>
+        <div class="card">
+          <h3>Health</h3>
+          <p>Connecting families with healthcare resources, wellness workshops, and support services.</p>
+        </div>
+        <div class="card">
+          <h3>Financial Literacy</h3>
+          <p>Workshops and guidance to equip youth and families with essential money management skills.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="impact">
+      <h2>Impact</h2>
+      <p>Here’s some of what we’ve done so far:</p>
+      <ul>
+        <li>Served over __ youth with tutoring and mentoring</li>
+        <li>Hosted __ health workshops or free clinics</li>
+        <li>Trained __ families in budgeting and financial skills</li>
+        <li>Volunteer hours contributed: __ hours</li>
+      </ul>
+      <div class="testimonial">
+        “Thanks to Caring Hands, my grades improved & I finally feel confident in school.” — Student served
+      </div>
+    </section>
+
+    <section id="involved">
+      <h2>Get Involved</h2>
+      <p>You can help make a difference. Whether you want to volunteer, donate, or partner with us, there are many ways to get involved:</p>
+      <ul>
+        <li>Volunteer: help with tutoring, health events, mentorship</li>
+        <li>Donate: one-time or monthly gifts help sustain our programs</li>
+        <li>Partner: local businesses, clinics, schools</li>
+        <li>Board / Advisory Roles</li>
+      </ul>
+    </section>
+
+    <section id="contact">
+      <h2>Contact Us</h2>
+      <p>Email: <a href="mailto:info@caringhandsoftennessee.com">info@caringhandsoftennessee.com</a></p>
+      <p>Phone: (123) 456-7890</p>
+      <p>Address: 123 Main Street, City, Tennessee ZIP</p>
+    </section>
+
+    <footer>
+
+    </footer>
+  </div>
+</body>
 </html>
