--- a/index.html
+++ b/index.html
@@ -1,166 +1,187 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Caring Hands of Tennessee</title>
-  <meta name="description" content="Expanding access to healthcare, education, and financial literacy in underserved communities." />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Caring Hands of Tennessee</title>
+<style>
+  :root {
+    --primary: #0b2c5d; /* dark blue */
+    --light: #ffffff;
+    --accent: #1e3a8a;
+    --radius: 12px;
+  }
+  * { box-sizing: border-box; margin:0; padding:0; }
+  body { font-family: Arial, sans-serif; background: var(--light); color: var(--primary); line-height:1.6; }
+  a { color: var(--accent); text-decoration:none; }
+  a:hover { text-decoration: underline; }
 
-  <style>
-    :root {
-      --primary: #0b2c5d; /* dark blue */
-      --light: #ffffff;
-      --muted: #e5e7eb;
-      --accent: #1e3a8a; /* a richer blue for accents */
-      --maxw: 1000px;
-      --radius: 12px;
-      font-family: "Segoe UI", Roboto, Arial, sans-serif;
-    }
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    body { background: var(--light); color: var(--primary); line-height: 1.6; }
-    a { color: var(--accent); text-decoration: none; }
-    a:hover { text-decoration: underline; }
+  /* Header / Navigation */
+  header { background: var(--primary); color: var(--light); padding: 20px; position: sticky; top:0; z-index:1000; }
+  header .wrap { display:flex; justify-content: space-between; align-items:center; flex-wrap: wrap; }
+  nav ul { list-style: none; display: flex; gap: 20px; flex-wrap: wrap; }
+  nav ul li a { color: var(--light); font-weight:600; }
+  nav ul li a:hover { color: var(--accent); }
 
-    .wrap { max-width: var(--maxw); margin: auto; padding: 24px; }
-    header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 32px; }
-    .logo { font-weight: bold; font-size: 24px; color: var(--primary); }
+  /* Hero */
+  .hero { background: var(--primary); color: var(--light); text-align:center; padding: 60px 20px; }
+  .hero h1 { font-size: 36px; margin-bottom: 12px; }
+  .hero p { font-size: 20px; }
 
-    nav a { margin-left: 20px; font-weight: 600; color: var(--primary); }
-    nav a:hover { color: var(--accent); }
+  /* Sections */
+  .wrap { max-width: 1000px; margin:auto; padding:20px; }
+  section { margin-bottom:40px; }
+  h2 { font-size:28px; margin-bottom:16px; border-bottom:3px solid var(--primary); display:inline-block; padding-bottom:4px; }
 
-    .hero {
-      text-align: center;
-      padding: 60px 20px;
-      background: var(--primary);
-      color: var(--light);
-      border-radius: var(--radius);
-      margin-bottom: 40px;
-    }
-    .hero h1 { font-size: 36px; margin-bottom: 16px; }
-    .hero p { font-size: 20px; margin-bottom: 20px; }
+  /* Accordion for Programs */
+  .accordion { background: var(--primary); color: var(--light); cursor: pointer; padding: 18px; width:100%; border:none; outline:none; text-align:left; font-size:18px; transition: 0.3s; border-radius: var(--radius); margin-bottom:8px;}
+  .active, .accordion:hover { background: var(--accent); }
+  .panel { padding: 0 18px; display:none; background-color: var(--light); color: var(--primary); overflow:hidden; border-radius: var(--radius); margin-bottom:10px; }
 
-    section { margin-bottom: 40px; }
-    h2 { margin-bottom: 16px; font-size: 28px; border-bottom: 3px solid var(--primary); display: inline-block; padding-bottom: 4px; }
+  /* Forms */
+  form input, form textarea { width:100%; padding:8px; margin:5px 0; border:1px solid var(--primary); border-radius: var(--radius); }
+  form button { background: var(--primary); color: var(--light); padding:10px 20px; border:none; border-radius: var(--radius); cursor:pointer; }
+  form button:hover { background: var(--accent); }
 
-    .card-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 20px;
-      margin-top: 16px;
-    }
-    .card {
-      background: var(--primary);
-      color: var(--light);
-      padding: 20px;
-      border-radius: var(--radius);
-    }
-    .card h3 { margin-bottom: 8px; font-size: 20px; }
-
-    .values-list { list-style: none; margin-top: 12px; }
-    .values-list li { margin-bottom: 8px; font-weight: 500; }
-
-    .testimonial {
-      font-style: italic;
-      padding: 20px;
-      background: var(--muted);
-      color: var(--primary);
-      border-radius: var(--radius);
-      margin: 20px 0;
-    }
-
-    footer {
-      text-align: center;
-      font-size: 14px;
-      padding: 20px;
-      border-top: 1px solid var(--muted);
-      color: var(--muted);
-    }
-  </style>
+  /* Footer */
+  footer { background: var(--primary); color: var(--light); text-align:center; padding:20px; }
+</style>
 </head>
-
 <body>
-  <div class="wrap">
-    <header>
-      <div class="logo">Caring Hands of Tennessee</div>
-      <nav>
-        <a href="#mission">Mission</a>
-        <a href="#vision">Vision</a>
-        <a href="#values">Values</a>
-        <a href="#programs">Programs</a>
-        <a href="#impact">Impact</a>
-        <a href="#involved">Get Involved</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </header>
 
-    <div class="hero">
-      <h1>Empowering Our Community Through Education & Health</h1>
-      <p>Providing access, support, and opportunity to every underserved youth.</p>
+<header>
+  <div class="wrap">
+    <div class="logo"><strong>Caring Hands of Tennessee</strong></div>
+    <nav>
+      <ul>
+        <li><a href="#mission">Mission</a></li>
+        <li><a href="#vision">Vision</a></li>
+        <li><a href="#story">Our Story</a></li>
+        <li><a href="#programs">Programs</a></li>
+        <li><a href="#tutoring">Tutoring</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#get-involved">Get Involved</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+
+<div class="hero">
+  <h1>Empowering Our Community Through Education & Health</h1>
+  <p>Providing access, support, and opportunity to every underserved youth.</p>
+</div>
+
+<div class="wrap">
+
+  <section id="mission">
+    <h2>Mission</h2>
+    <p>To expand access to healthcare, financial literacy, and education, empowering underserved communities to thrive.</p>
+  </section>
+
+  <section id="vision">
+    <h2>Vision</h2>
+    <p>To create a future where underserved youth thrive with health, knowledge, and opportunity.</p>
+  </section>
+
+  <section id="story">
+    <h2>Our Story</h2>
+    <p>In our community, many youth lack access to basic resources, tutoring, and support. Inspired to uplift them, we launched programs in education, health, and financial literacy to ensure that no one is left behind.</p>
+    <p>Caring Hands of Tennessee was created with a simple belief: everyone deserves unlimited access to education and healthcare. What began as a vision to serve local youth has grown into a mission to empower families, strengthen communities, and provide resources that create lasting change.</p>
+  </section>
+
+  <section id="programs">
+    <h2>Programs</h2>
+
+    <button class="accordion">Education</button>
+    <div class="panel">
+      <p>We provide tutoring, mentorship, and resources to help students succeed academically and build confidence.</p>
     </div>
 
-    <section id="mission">
-      <h2>Mission</h2>
-      <p>To expand access to healthcare, financial literacy, and education, empowering underserved communities to thrive.</p>
-    </section>
+    <button class="accordion">Health & Wellness</button>
+    <div class="panel">
+      <p>We offer wellness workshops, guidance, and support services to ensure youth have access to health resources.</p>
+    </div>
 
-    <section id="vision">
-      <h2>Vision</h2>
-      <p>To create a future where underserved youth thrive with health, knowledge, and opportunity.</p>
-    </section>
+    <button class="accordion">Financial Literacy</button>
+    <div class="panel">
+      <p>Workshops and guidance help youth and families develop budgeting and money management skills.</p>
+    </div>
 
-    <section id="values">
-      <h2>Our Values</h2>
-      <ul class="values-list">
-        <li>Compassion</li>
-        <li>Equity</li>
-        <li>Empowerment</li>
-        <li>Integrity</li>
-        <li>Inclusion</li>
-      </ul>
-    </section>
+  </section>
 
-    <section id="story">
-      <h2>Our Story</h2>
-      <p>In our community, many youth lack access to basic resources, tutoring, and support. Inspired to uplift them, we launched programs in education, health, and financial literacy to ensure that no one is left behind.</p>
-      <p>Caring Hands of Tennessee was created with a simple belief: everyone deserves unlimited access to education and healthcare. What began as a vision to serve local youth has grown into a mission to empower families, strengthen communities, and provide resources that create lasting change.</p>
-    </section>
+  <section id="tutoring">
+    <h2>Sign Up for Tutoring</h2>
+    <p>We offer tutoring in:</p>
+    <ul>
+      <li>All English courses</li>
+      <li>All Science courses (except one upper-level course)</li>
+      <li>All Math courses up to Calculus</li>
+      <li>ACT preparation</li>
+    </ul>
 
-    <section id="programs">
-      <h2>Programs</h2>
-      <div class="card-grid">
-        <div class="card">
-          <h3>Education</h3>
-          <p>Tutoring, mentoring, & resources that help students succeed in school and beyond.</p>
-        </div>
-        <div class="card">
-          <h3>Health</h3>
-          <p>Connecting families with healthcare resources, wellness workshops, and support services.</p>
-        </div>
-        <div class="card">
-          <h3>Financial Literacy</h3>
-          <p>Workshops and guidance to equip youth and families with essential money management skills.</p>
-        </div>
-      </div>
-    </section>
+    <form action="https://formspree.io/f/your-tutoring-form-id" method="POST">
+      <label for="name">Name:</label><br>
+      <input type="text" id="name" name="name" required><br>
 
-   
+      <label for="email">Email:</label><br>
+      <input type="email" id="email" name="_replyto" required><br>
 
-    <section id="involved">
-      <h2>Get Involved</h2>
-      <p>You can help make a difference. Whether you want to volunteer, donate, or partner with us, there are many ways to get involved:</p>
-      <ul>
-        <li>Volunteer: help with tutoring, health events, mentorship</li>
-        <li>Donate: one-time or monthly gifts help sustain our programs</li>
-        <li>Partner: local businesses, clinics, schools</li>
-        <li>Board / Advisory Roles</li>
-      </ul>
-    </section>
+      <label for="subjects">Subjects Interested In:</label><br>
+      <input type="text" id="subjects" name="subjects" placeholder="e.g., Algebra, ACT Reading"><br>
 
- 
+      <label for="notes">Additional Notes:</label><br>
+      <textarea id="notes" name="notes" rows="4"></textarea><br>
 
-    <footer>
+      <button type="submit">Sign Up</button>
+    </form>
+  </section>
 
-    </footer>
-  </div>
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <form action="https://formspree.io/f/your-contact-form-id" method="POST">
+      <label for="name2">Name:</label><br>
+      <input type="text" id="name2" name="name" required><br>
+
+      <label for="email2">Email:</label><br>
+      <input type="email" id="email2" name="_replyto" required><br>
+
+      <label for="subject">Subject:</label><br>
+      <input type="text" id="subject" name="subject"><br>
+
+      <label for="message">Message:</label><br>
+      <textarea id="message" name="message" rows="5" required></textarea><br>
+
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
+
+  <section id="get-involved">
+    <h2>Get Involved</h2>
+    <ul>
+      <li>Volunteer: Help with tutoring, mentorship, and workshops</li>
+      <li>Donate: One-time or monthly gifts to support programs</li>
+      <li>Partner: Work with us as a school, business, or community organization</li>
+    </ul>
+  </section>
+
+</div>
+
+<footer>
+  Caring Hands of Tennessee
+</footer>
+
+<script>
+  // Accordion functionality
+  const acc = document.getElementsByClassName("accordion");
+  for (let i = 0; i < acc.length; i++) {
+    acc[i].addEventListener("click", function() {
+      this.classList.toggle("active");
+      const panel = this.nextElementSibling;
+      panel.style.display = panel.style.display === "block" ? "none" : "block";
+    });
+  }
+</script>
+
 </body>
 </html>
+
