--- a/index.html
+++ b/index.html
@@ -15,19 +15,38 @@
   }
 
   * { box-sizing: border-box; margin:0; padding:0; }
-  body { font-family: 'Poppins', sans-serif; background: var(--light); color: var(--primary); line-height:1.6; }
+  body { 
+    font-family: 'Poppins', sans-serif; 
+    background: linear-gradient(135deg, #ffffff, #e6f0ff);
+    color: var(--primary); 
+    line-height:1.6; 
+  }
   a { color: var(--accent); text-decoration:none; }
   a:hover { text-decoration: underline; }
 
   /* Header / Navigation */
-  header { background: var(--primary); color: var(--light); padding: 15px 20px; position: sticky; top:0; z-index:1000; display:flex; justify-content:space-between; align-items:center; }
+  header { 
+    background: var(--primary); 
+    color: var(--light); 
+    padding: 15px 20px; 
+    position: sticky; top:0; 
+    z-index:1000; 
+    display:flex; justify-content:space-between; 
+    align-items:center; 
+  }
   .logo img { height: 50px; margin-right: 10px; vertical-align: middle; }
   nav ul { list-style: none; display: flex; gap: 20px; flex-wrap: wrap; }
   nav ul li a { color: var(--light); font-weight:600; transition:0.3s; }
   nav ul li a:hover { color: var(--secondary); }
 
   /* Hero */
-  .hero { background: var(--primary); color: var(--light); text-align:center; padding: 80px 20px; border-bottom: 5px solid var(--secondary); }
+  .hero { 
+    background: linear-gradient(135deg, #0b2c5d, #1e3a8a); 
+    color: var(--light); 
+    text-align:center; 
+    padding: 80px 20px; 
+    border-bottom: 5px solid var(--secondary); 
+  }
   .hero h1 { font-size: 42px; margin-bottom: 12px; }
   .hero p { font-size: 22px; }
 
@@ -37,17 +56,45 @@
   h2 { font-size:32px; margin-bottom:24px; border-left:6px solid var(--secondary); padding-left:10px; }
 
   /* Cards for Programs / Tutoring / Contact */
-  .card { background: var(--light); padding: 25px; border-radius: var(--radius); box-shadow: 0 4px 10px rgba(0,0,0,0.1); margin-bottom:20px; transition: transform 0.2s; }
-  .card:hover { transform: translateY(-5px); }
+  .card { 
+    background: linear-gradient(145deg, #ffffff, #f2f7ff); 
+    padding: 25px; 
+    border-radius: var(--radius); 
+    box-shadow: 0 6px 15px rgba(0,0,0,0.1); 
+    margin-bottom:20px; 
+    transition: transform 0.3s, box-shadow 0.3s; 
+  }
+  .card:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0,0,0,0.15); }
 
   /* Accordion for Programs */
-  .accordion { background: var(--primary); color: var(--light); cursor: pointer; padding: 18px; width:100%; border:none; outline:none; text-align:left; font-size:20px; transition: 0.3s; border-radius: var(--radius); margin-bottom:8px;}
+  .accordion { 
+    background: var(--primary); 
+    color: var(--light); 
+    cursor: pointer; 
+    padding: 18px; 
+    width:100%; 
+    border:none; outline:none; 
+    text-align:left; font-size:20px; 
+    transition: 0.3s; border-radius: var(--radius); margin-bottom:8px;
+  }
   .active, .accordion:hover { background: var(--accent); }
-  .panel { padding: 0 18px; display:none; background-color: var(--light); color: var(--primary); overflow:hidden; border-radius: var(--radius); margin-bottom:10px; }
+  .panel { 
+    padding: 0 18px; display:none; 
+    background-color: var(--light); color: var(--primary); 
+    overflow:hidden; border-radius: var(--radius); margin-bottom:10px; 
+  }
 
   /* Forms */
-  form input, form textarea { width:100%; padding:10px; margin:5px 0; border:1px solid var(--primary); border-radius: var(--radius); font-family: 'Poppins', sans-serif; }
-  form button { background: var(--secondary); color: var(--light); padding:12px 25px; border:none; border-radius: var(--radius); cursor:pointer; font-size:16px; transition:0.3s; }
+  form input, form textarea { 
+    width:100%; padding:10px; margin:5px 0; 
+    border:1px solid var(--primary); border-radius: var(--radius); 
+    font-family: 'Poppins', sans-serif; 
+  }
+  form button { 
+    background: var(--secondary); color: var(--light); 
+    padding:12px 25px; border:none; border-radius: var(--radius); 
+    cursor:pointer; font-size:16px; transition:0.3s; 
+  }
   form button:hover { background: var(--accent); }
 
   /* Footer */
@@ -120,7 +167,7 @@
     <p>We offer tutoring in:</p>
     <ul>
       <li>All English courses</li>
-      <li>All Science courses (except one upper-level course)</li>
+      <li>All Science courses</li>
       <li>All Math courses up to Calculus</li>
       <li>ACT preparation</li>
     </ul>
